--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Noder",
   "version": "1.0.0",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
