--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Noder",
   "start": "node app.js",
+  "test": "echo \"Error: no test specified\" && exit 1",
   "version": "1.0.0",
   "dependencies": {
     "body-parser": "^1.20.2",
