changed app to index

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Noder",
-  "start": "node app.js",
+  "start": "node index.js",
   "test": "echo \"Error: no test specified\" && exit 1",
   "version": "1.0.0",
   "dependencies": {
