--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Noder",
   "start": "node index.js",
   "test": "echo \"Error: no test specified\" && exit 1",
+  "engines": { "node": "12.16.1", "npm": "6.14.4" },
   "version": "1.0.0",
   "dependencies": {
     "body-parser": "^1.20.2",
