--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Noder",
   "engines": { "node": "12.16.1", "npm": "6.14.4" },
   "version": "1.0.0",
+  "main": "app.js",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
