--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "Noder",
-  "engines": { "node": "12.16.1", "npm": "6.14.4" },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.14.4"
+  },
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "firebase-admin": "11.11.0",
+    "firebase-admin": "^11.11.0",
     "http-errors": "^2.0.0",
     "jade": "^0.29.0",
     "mongoose": "^8.0.0",
