--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.0",
+    "firebase-admin": "11.11.0",
     "http-errors": "^2.0.0",
     "jade": "^0.29.0",
     "mongoose": "^8.0.0",
